; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_dev.c_dn_eth_up.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_dev.c_dn_eth_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { %struct.dn_dev* }
%struct.dn_dev = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@dn_rt_all_end_mcast = common dso_local global i32 0, align 4
@ETH_ALEN = common dso_local global i32 0, align 4
@dn_rt_all_rt_mcast = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @dn_eth_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dn_eth_up(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.dn_dev*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = getelementptr inbounds %struct.net_device, %struct.net_device* %4, i32 0, i32 0
  %6 = load %struct.dn_dev*, %struct.dn_dev** %5, align 8
  store %struct.dn_dev* %6, %struct.dn_dev** %3, align 8
  %7 = load %struct.dn_dev*, %struct.dn_dev** %3, align 8
  %8 = getelementptr inbounds %struct.dn_dev, %struct.dn_dev* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.net_device*, %struct.net_device** %2, align 8
  %14 = load i32, i32* @dn_rt_all_end_mcast, align 4
  %15 = load i32, i32* @ETH_ALEN, align 4
  %16 = call i32 @dev_mc_add(%struct.net_device* %13, i32 %14, i32 %15, i32 0)
  br label %22

17:                                               ; preds = %1
  %18 = load %struct.net_device*, %struct.net_device** %2, align 8
  %19 = load i32, i32* @dn_rt_all_rt_mcast, align 4
  %20 = load i32, i32* @ETH_ALEN, align 4
  %21 = call i32 @dev_mc_add(%struct.net_device* %18, i32 %19, i32 %20, i32 0)
  br label %22

22:                                               ; preds = %17, %12
  %23 = load %struct.dn_dev*, %struct.dn_dev** %3, align 8
  %24 = getelementptr inbounds %struct.dn_dev, %struct.dn_dev* %23, i32 0, i32 0
  store i32 1, i32* %24, align 8
  ret i32 0
}

declare dso_local i32 @dev_mc_add(%struct.net_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
